fix background alignment , change text decoration

--- a/style.css
+++ b/style.css
@@ -1,110 +1,116 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: transparent;
+    -webkit-text-stroke: 0.06rem;
+    -webkit-text-stroke-color: rgb(255, 255, 255);
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+html,
 body {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-}
-main {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  align-items: center;
-  gap: 20px;
-  background: fixed;
-  color: white;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  max-width: max-content;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 
-#image-wrapper {
-  position: relative;
-  width: 100dvw;
-  height: 100vh;
-  overflow: hidden;
-  z-index: -1;
-  position: absolute;
-}
-
-#wallpaper {
-  width: 100dvw;
-  height: 100vh;
-  width: initial;
-  overflow: hidden;
-  filter: blur(1px);
+body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    user-select: none;
+    overflow: hidden;
+    background-color: rgb(0, 0, 0);
 }
 
 header {
-  text-align: center;
-  font-size: xx-large;
-  margin-top: 10px;
+    font-size: 5rem;
+    text-align: center;
+    padding: 12px;
 }
 
-form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
+main {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    gap: 20px;
+    background: fixed;
+    color: white;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    max-width: max-content;
+    overflow: hidden;
+}
+
+#image-wrapper {
+    position: absolute;
+    inset: 0;
+    overflow: hidden;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+}
+
+#wallpaper {
+    background-attachment: fixed;
+    overflow: hidden;
+    filter: brightness(0.7);
 }
 
 section {
-  display: flex;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, max-content);
-  justify-items: center;
-  align-items: center;
-  margin: 30px 10px;
+    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, max-content);
+    justify-items: center;
+    align-items: center;
 }
 
 #image img {
-  filter: drop-shadow(3px 4px 2px black);
+    filter: drop-shadow(3px 4px 2px black);
 }
 
 #status {
-  backdrop-filter: blur(30px);
+    backdrop-filter: blur(30px);
 }
 #temp {
-  grid-area: 1/1/3/2;
-  font-size: 90px;
+    grid-area: 1/1/3/2;
+    font-size: 90px;
 }
 form {
-  & input {
-    text-align: center;
-    height: 35px;
-    width: 270px;
-    font-size: xx-large;
-    border: 0px solid;
-    padding: 4px 10px;
-    border-radius: 4px;
-    background: rgba(135, 207, 235, 0.297);
-    color: inherit;
-    outline: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    width: 100vw;
+    margin: 20px 0 0 0;
+    & input {
+        text-align: center;
+        width: 270px;
+        font-size: xx-large;
+        border: 1px solid white;
+        padding: 4px 10px;
+        border-radius: 4px;
+        background: rgba(135, 207, 235, 0);
+        color: inherit;
+        outline: none;
+        padding: 4px;
 
-    &:focus {
-      outline: none;
-      font-size: large;
+        &:focus {
+            outline: none;
+        }
     }
-  }
 
-  & button {
-    background: none;
-    border: none;
-    background-color: rgba(78, 165, 199, 0.347);
-    color: white;
-    padding: 12px;
-    font-size: large;
-    border-radius: 4px;
-  }
-}
-
-input::placeholder {
-  color: white;
+    & button {
+        background: none;
+        border: 1px solid white;
+        background-color: rgba(78, 165, 199, 0);
+        padding: 9px;
+        font-size: x-large;
+        border-radius: 4px;
+    }
 }
